[gd_scene load_steps=8 format=2]

[ext_resource path="res://test/scenes/launcher.tscn" type="PackedScene" id=1]
[ext_resource path="res://test/scripts/ailauncher.gd" type="Script" id=2]
[ext_resource path="res://test/sprites/ability effects/ice crack.png" type="Texture" id=3]

[node name="ailauncher" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="health" parent="."]

margin_right = 280.0

[node name="ice" parent="."]

texture = ExtResource( 3 )

[node name="firedamage" parent="."]

position = Vector2( 99.3561, 65.3207 )

[node name="glowheal" parent="."]

position = Vector2( 99.0831, 76.0334 )

[node name="RayCastCenter" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="RayCastCenter"]

position = Vector2( 41, 0 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="RayCastCenter"]

position = Vector2( -41, 0 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 2
